max width added to avoid big screens issues - scrollbar styled for all pages

--- a/main.scss
+++ b/main.scss
@@ -21,6 +21,21 @@ html, body {
 body {
   max-width: 2565px;
 }
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e2e2e2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d38c6d;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b06e4f; 
+}
 
 // Promo Header ===================================================
 .promo-header {
