--- a/pages/sign-up.scss
+++ b/pages/sign-up.scss
@@ -13,11 +13,28 @@
 }
 body{
   overflow-x: hidden;
+  max-width: 2565px;
   &:has(.scrolled){
     .main-container{
       margin-top: 78px;
     }
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e2e2e2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d38c6d;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b06e4f; 
 }
 
 // promo header ====================================================================
